fixed tiny layout issues

--- a/_static/sass/base/_hierarchy.scss
+++ b/_static/sass/base/_hierarchy.scss
@@ -23,7 +23,7 @@ h1 {
 		@include remCalc(font-size, 30);
 		line-height: 1.15;
 		margin-bottom: 20px;
-    -webkit-font-smoothing: antialiased; 
+    -webkit-font-smoothing: antialiased;
 		@include media(">medium") {
 			@include remCalc(font-size, 38);
 			line-height: 1.2;
@@ -61,7 +61,7 @@ h2 {
 		line-height: 1.3;
 		@include media(">medium") {
 			@include remCalc(font-size, 24);
-			line-height: 1.3;
+			line-height: 1.2;
 		}
 		@include media(">large") {
 			@include remCalc(font-size, 30);
