--- a/_static/sass/modules/_longform.scss
+++ b/_static/sass/modules/_longform.scss
@@ -60,7 +60,7 @@ ol li {
 		}
 		@include media(">large") {
 			@include remCalc(font-size, 19);
-			line-height: 1.6;
+			line-height: 1.55;
 		}
 
 		& > img {
