--- a/css/adventures.css
+++ b/css/adventures.css
@@ -809,7 +809,7 @@ h2 {
     h2 {
       font-size: 24px;
       font-size: 1.5rem;
-      line-height: 1.3; } }
+      line-height: 1.2; } }
   @media (min-width: 921px) {
     .m-longform .h2, .m-longform
     h2 {
