--- a/css/projects.css
+++ b/css/projects.css
@@ -974,7 +974,7 @@ h2 {
     h2 {
       font-size: 24px;
       font-size: 1.5rem;
-      line-height: 1.3; } }
+      line-height: 1.2; } }
   @media (min-width: 921px) {
     .m-longform .h2, .m-longform
     h2 {
@@ -1326,7 +1326,7 @@ The `preserve-aspect` parent preserves the aspect ratio of an iframe or video.
     .m-longform ul {
       font-size: 19px;
       font-size: 1.1875rem;
-      line-height: 1.6; } }
+      line-height: 1.55; } }
   .m-longform ol > img,
   .m-longform p > img,
   .m-longform ul > img {
@@ -1549,9 +1549,9 @@ hgroup {
     .m-wrapper {
       display: grid;
       grid-gap: 25px;
-      max-width: 1000px;
-      max-width: 62.5rem;
-      grid-template-columns: repeat(18, 1fr);
+      max-width: 960px;
+      max-width: 60rem;
+      grid-template-columns: repeat(16, 1fr);
       padding: 0px 25px;
       padding: 0rem 1.5625rem; } }
 
@@ -1564,13 +1564,13 @@ hgroup {
       padding: 0 5%; } }
   @media (min-width: 921px) {
     .m-wrapper__content, .m-wrapper__side {
-      grid-column: 1 / 14;
+      grid-column: 1 / 12;
       padding: 0px;
       padding: 0rem; } }
 
 @media (min-width: 921px) {
   .m-wrapper__side {
-    grid-column: 14 / 19; } }
+    grid-column: 12 / 17; } }
 
 .m-wrapper--unpadded .m-wrapper__content {
   max-width: none;
